--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="font-size: 64px; color: rgb(255, 255, 255);"></a>
+                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="font-size: 48px; color: rgb(255, 255, 255);"></a>
                         <a class="navbar-caption" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
                     </div>
 
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false"><br><br><br>ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="true">VISION AND MISSION STATEMENT</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">FOUNDER'S MESSAGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - LAGOS</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - OGUN</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">SCHOOL SONG</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">GUVERNANCE (QUALITY ASSURANGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">MEET THE TEAM (STAFF)</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>NEWS &amp; EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ALUMNI</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><div><br></div><br>CAREERS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>STUDENTS &amp; RESULTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><h6></h6></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6" data-rv-view="57" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6" data-rv-view="57" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
