create github pages

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   
 </head>
 <body>
-  <section id="ext_menu-0" data-rv-view="0">
+  <section id="ext_menu-9" data-rv-view="65">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -57,25 +57,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6" data-rv-view="57" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">Title with Solid Background Color</h3>
-                <small class="mbr-section-subtitle">By John Smith posted July 20, 2016</small>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-7" data-rv-view="59" style="background-image: url(assets/images/desert.jpg); padding-top: 80px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.me/m">free web design templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/desert.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">JEXTOBAN SECONDARY SCHOOL</h3>
+                <h3 class="mbr-section-title display-2"><br><br>JEXTOBAN SECONDARY SCHOOL</h3>
                 <div class="lead"><p>.....a value driven secondary school</p></div>
                 
             </div>
