--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <section id="ext_menu-9" data-rv-view="65">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-606x303.png); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-606x303.png); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
