create github pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false"><br><br><br>ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="true">VISION AND MISSION STATEMENT</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">FOUNDER'S MESSAGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - LAGOS</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - OGUN</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">SCHOOL SONG</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">GUVERNANCE (QUALITY ASSURANGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">MEET THE TEAM (STAFF)</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>NEWS &amp; EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ALUMNI</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><div><br></div><br>CAREERS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>STUDENTS &amp; RESULTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><h6></h6></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true"><br><br><br>ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">VISION AND MISSION STATEMENT</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">FOUNDER'S MESSAGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - LAGOS</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - OGUN</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">SCHOOL SONG</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">GUVERNANCE (QUALITY ASSURANGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">MEET THE TEAM (STAFF)</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>NEWS &amp; EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ALUMNI</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><div><br></div><br>CAREERS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>STUDENTS &amp; RESULTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><h6></h6></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-606x303.png); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/r">free bootstrap templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-606x303.png); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -77,11 +77,10 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
