--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap website templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-2-606x303.png); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/s">bootstrap theme</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-8" data-rv-view="62" style="background-image: url(assets/images/student01-2-606x303.png); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
