--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/h">create a web page</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="70" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/d">free site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="70" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -79,9 +79,9 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-a" data-rv-view="67" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-a" data-rv-view="67" style="background-image: url(assets/images/students02-1063x485.png);">
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(204, 204, 204);">
+    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(204, 204, 204);">
     </div>
 
     <div class="mbr-table mbr-table-full">
