create github pages

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/theme/css/style-rtl.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
-<body>
-  <section id="ext_menu-9" data-rv-view="65">
+<body class="rtl">
+  <section id="menu-c" data-rv-view="8">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -33,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="font-size: 48px; color: rgb(255, 255, 255);"></a>
+                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(255, 255, 255);"></a>
                         <a class="navbar-caption" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
                     </div>
 
@@ -44,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true"><br><br><br>ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">VISION AND MISSION STATEMENT</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">FOUNDER'S MESSAGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - LAGOS</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">PRINCIPAL'S MESSAGE - OGUN</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">SCHOOL SONG</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">GUVERNANCE (QUALITY ASSURANGE</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">MEET THE TEAM (STAFF)</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>NEWS &amp; EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ALUMNI</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><div><br></div><br>CAREERS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br><br>STUDENTS &amp; RESULTS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><br><br>ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"><h6></h6></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Vision &amp; Mission Statement</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Founder's Message</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">&nbsp;Principal's Message/Lagos</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false"> Principal's Message/Ogun</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">School Song</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Guvernance/Quality Assurance</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Staff/Team</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">SCHOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Facilities</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Curriculum</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ALUMNI</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">CAREERS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">New Item</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">simple web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="70" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/i">site creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -79,7 +80,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-a" data-rv-view="67" style="background-image: url(assets/images/students02-1063x485.png);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-a" data-rv-view="5" style="background-image: url(assets/images/students02-1063x485.png);">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(204, 204, 204);">
     </div>
@@ -132,6 +133,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
