--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -71,7 +71,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     <h1 class="mbr-section-title display-1"></h1>
-                    <p class="mbr-section-lead lead">...a value driven secondary school</p>
+                    <p class="mbr-section-lead lead">...a value driven secondary school....</p>
                     
                 </div>
             </div>
@@ -84,13 +84,13 @@
 
 <section class="mbr-section mbr-section-hero mbr-section-full extHeader7 mbr-parallax-background" id="extHeader7-d" data-rv-view="8" style="background-image: url(assets/images/student01-606x303.png);">
 
-    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
+    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(0, 0, 0);">
     </div>
         <div class="mbr-table-cell">
             <div class="container">
                 <div class="mbr-section row">
                     <div>
-                            <h3 class="mbr-section-title display-2 text-center">You are welcome to contact us</h3>
+                            <h3 class="mbr-section-title display-2 text-center">Y<em>ou are welcome to contact us</em></h3>
 
                             <div class="mbr-section-text lead text-center">
                                 <p>Please fill out the contacy form below and we will reply &nbsp;shortly</p>
@@ -107,7 +107,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="You are welcome to contact us">
-                                    <input type="hidden" value="58Es4NkJj63wz09giT+gKYKVIep/ecJXVJjNpW9NYpOwYp1fpX9T0slVvhtJPM45g+8eps2OKiMynh+HCfXhtsf2haywF0OgVbBOxZiqdalEqlLjiay9nSyQ7nPL1tBM" data-form-email="true">
+                                    <input type="hidden" value="gM3dYuyTZjfP5DgzUT0DRnaEaSYT9C4hMm3DM+1bpdPUNxPicbSJNWBYIvRSOiAExN3696OKimkDXiBf7bM7QvCQidCxmxp8QquOhfpiOF25nVjG7B/ePDwjRY/y/Jb9" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="name" class="form-control" name="name" required="" data-form-field="Name" placeholder="Your Full Name">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
