--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(255, 255, 255);"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
+                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(43, 6, 128);"></a>
+                        <a class="navbar-caption text-white" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
                     </div>
 
                 </div>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/q">free responsive site templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/i">web creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -107,7 +107,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="You are welcome to contact us">
-                                    <input type="hidden" value="iBZWQt/2aALtG8xGYlfHgLqNflY3Iuxx5Mb4pAcsldjhOTmy7k/JxIkvDHhNRTwqWRls4B62WPYIjRbx8jQLf29yPIJr4xLrRne63k6yCuifLFv7kY2anr0pxD225JGP" data-form-email="true">
+                                    <input type="hidden" value="M6JHvnOal1xgGL+Y9uRmL4yCUGbwop1xexY3lwVUZp9Fg3T1Mt1Ov+GctBZzdF1VnYPo6ZlogzHo3W+WY4r7mRfz0+F0jDGI3+IGLXiHr77k4YZ/MA4jIuNlRfX7k5XU" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="name" class="form-control" name="name" required="" data-form-field="Name" placeholder="Your Full Name">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
