--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(43, 6, 128);"></a>
+                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(126, 100, 188);"></a>
                         <a class="navbar-caption text-white" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
                     </div>
 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">create a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/r">bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -107,7 +107,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="You are welcome to contact us">
-                                    <input type="hidden" value="YPP068zPqoxmK1teilzwcoiod72g3c+2E4rKcFGQf93LyG0HXbg36xWSq7U8Ef/VP7xlGzrmRtS2pCpxxEOUZoZzGLHGUGaKnRFkU8qTEuWbNiq3nn4d3bDO03/jUIO2" data-form-email="true">
+                                    <input type="hidden" value="TdzexFnmWCvKOvFk7vYs9wQsRupYXJpQWOR4l27xVo990SMt9JepMlWfHMs8hZMUmznnzh1iJKSfTlfPKl6/ohlZylubzl9LemUDLR7tnkF9vgsNrKktiXN7g9ROAgJG" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="name" class="form-control" name="name" required="" data-form-field="Name" placeholder="Your Full Name">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
